# logosone

./: .clinerules  .env.example  .envrc  .eslintignore  .eslintrc.json  .gitignore  .pr_agent.toml  Cargo.toml  Dockerfile  Makefile  Package.resolved  Package.swift  README.md  Taskfile.yml  aqua.yaml  buf.gen.yaml  build.rs  bun.lockb  compose.prod.yml  compose.yml  go.mod  go.sum  main.go  next.config.js  package-lock.json  package.json  panda.config.ts  pnpm-lock.yaml
app/: layout.tsx  (+3 more)
proto/: Cargo.toml  Package.resolved  Package.swift  README.md  buf.gen.yaml  buf.yaml  common.proto  go.mod  package-lock.json  package.json  pnpm-lock.yaml  pos_service.proto  ticket_service.proto
proto/Sources/cafelogos-grpc/common/: common.pb.swift
proto/Sources/cafelogos-grpc/orderlink/: orderlink_service.connect.swift
proto/Sources/cafelogos-grpc/pos/: pos_service.connect.swift  pos_service.pb.swift
proto/Sources/logosone-proto/pos/: pos_service.connect.swift  pos_service.pb.swift
proto/Sources/logosone-proto/ticket/: ticket_service.connect.swift  ticket_service.pb.swift
proto/Tests/cafelogos-grpcTests/: cafelogos_grpcTests.swift
proto/orderlink/: orderlink_service.proto
proto/pkg/common/: common.pb.go
proto/pkg/orderlink/: orderlink_service.pb.go
proto/pkg/orderlink/orderlinkconnect/: orderlink_service.connect.go
proto/pkg/pos/: pos_service.pb.go
proto/pkg/pos/posconnect/: pos_service.connect.go
proto/pkg/ticket/: ticket_service.pb.go
proto/pkg/ticket/ticketconnect/: ticket_service.connect.go
proto/pos/: pos_service.proto
proto/proto/common/: common.proto
proto/proto/orderlink/: orderlink_service.proto
proto/proto/pos/: pos_service.proto
proto/proto/ticket/: ticket_service.proto
proto/scripts/common/: common_pb.d.ts  common_pb.js  common_pb.ts
proto/scripts/orderlink/: orderlink_service-OrderLinkService_connectquery.d.ts  orderlink_service-OrderLinkService_connectquery.ts  orderlink_service_connect.d.ts  orderlink_service_connect.js  orderlink_service_connect.ts  orderlink_service_pb.d.ts  orderlink_service_pb.js  orderlink_service_pb.ts
proto/scripts/pos/: pos_service-PosService_connectquery.d.ts  pos_service-PosService_connectquery.js  pos_service-PosService_connectquery.ts  pos_service_connect.js  pos_service_connect.ts  pos_service_pb.d.ts  pos_service_pb.js  pos_service_pb.ts
proto/scripts/ticket/: ticket_service-TicketService_connectquery.d.ts  ticket_service-TicketService_connectquery.js  ticket_service-TicketService_connectquery.ts  ticket_service_connect.d.ts  ticket_service_connect.js  ticket_service_pb.d.ts  ticket_service_pb.js  ticket_service_pb.ts
proto/src/: cafelogos.ticket.rs  lib.rs
ticket-backend/: Cargo.toml  Dockerfile  README.md  compose.yml  entrypoint.sh
ticket-backend/src/: lib.rs  main.rs
ticket-backend/src/application/ticket/: issue_ticket.rs  revoke_ticket.rs
ticket-backend/src/domain/ticket/: mod.rs  model.rs
ticket-backend/src/infra/dao/: mod.rs  prelude.rs  ticket.rs
ticket-backend/src/infra/ticket/: db.rs
ticket-backend/src/presentation/: mod.rs
ticket-backend/src/presentation/ticket/: mod.rs  revoke_ticket.rs
(+836 files in other folders)
