[package]
name = "cafelogos-ticket-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cafelogos_ticket_backend"
path = "src/lib.rs"

[workspace]
members = [".", "migration"]

[dependencies]
async-trait = "0.1.73"
cafelogos-grpc = { git = "https://github.com/KaguraGateway/cafelogos-grpc.git", version = "0.1.1" }
chrono = "0.4.28"
cuid = "1.3.2"
dotenv = "0.15.0"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
shaku = "0.6.1"
thiserror = "1.0.48"
tokio = "1.32.0"
tonic = "0.10.0"
