[package]
name = "cafelogos-grpc"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cafelogos_grpc"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
tonic = "0.10.0"

[build-dependencies]
tonic-build = "0.10.0"
