[package]
name = "cafelogos-ticket-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cafelogos_ticket_backend"
path = "src/lib.rs"

[workspace]
members = [".", "migration"]

[dependencies]
async-trait = "0.1.83"
cafelogos-grpc = { git = "https://github.com/KaguraGateway/cafelogos-grpc.git", version = "0.1.14" }
chrono = "0.4.38"
cuid = "1.3.3"
dotenv = "0.15.0"
sea-orm = { version = "1.0.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
shaku = "0.6.2"
thiserror = "1.0.64"
tokio = "1.40.0"
tonic = "0.12.3"
